--- a/Python-Coding-Challenges/Nested_list_comprehensions.ipynb
+++ b/Python-Coding-Challenges/Nested_list_comprehensions.ipynb
@@ -125,6 +125,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Name': 'Ajay', 'experience': (('Blusapphire', 2), ('Exusia', 3)), (1,): ()}\n"
+     ]
+    }
+   ],
+   "source": [
+    "samp = {'Name':'Ajay','experience':(('Blusapphire',2),('Exusia',3)),(1,):()}\n",
+    "print(samp)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
