--- a/Python-Coding-Challenges/Nested_list_comprehensions.ipynb
+++ b/Python-Coding-Challenges/Nested_list_comprehensions.ipynb
@@ -2,13 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -97,30 +90,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['b', 'a', 'l', 'l']\n"
+      "Map:  [None, None, None, 'b', 'a', 'l', 'l']\n",
+      "Filter:  ['b', 'a', 'l', 'l']\n"
      ]
     }
    ],
    "source": [
-    "# The main difference between a map and a filter is the return of values. A map will always have \n",
-    "# a representation for elements in the list. The filter will filter out the only elements that will meet the \n",
-    "# conditions in the function.\n",
+    "# The main difference between a map and a filter is the return of values. \n",
+    "# A map will always have a representation for elements in the list. \n",
+    "# The filter will filter out the only elements that will meet the conditions in the function.\n",
     "\n",
     "def checkElementIn(a):\n",
     "    nameList = ['b','a','l','l']\n",
     "    if a in nameList:\n",
     "        return a\n",
     "testList = ['r','e','d','b','a','l','l']\n",
-    "# m_list = list(map(checkElementIn, testList))\n",
-    "m_list = list(filter(checkElementIn, testList))\n",
-    "print(m_list)\n"
+    "m_list = list(map(checkElementIn, testList))\n",
+    "f_list = list(filter(checkElementIn, testList))\n",
+    "print(\"Map: \",m_list)\n",
+    "print(\"Filter: \", f_list)\n"
    ]
   },
   {
