--- a/Python-Coding-Challenges/Pattern_Problems.ipynb
+++ b/Python-Coding-Challenges/Pattern_Problems.ipynb
@@ -211,6 +211,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    *\n",
+      "   ***\n",
+      "  *****\n",
+      " *******\n",
+      "*********\n",
+      "*********\n",
+      " *******\n",
+      "  *****\n",
+      "   ***\n",
+      "    *\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 5\n",
+    "for i in range(1,N+1):\n",
+    "    for space in range(N-i):\n",
+    "        print(\" \", end=\"\")\n",
+    "    for j in range(1,2*i):\n",
+    "        print(\"*\",end=\"\")\n",
+    "    print()\n",
+    "for i in range(N,0,-1):\n",
+    "    for space in range(N-i):\n",
+    "        print(\" \", end=\"\")\n",
+    "    for j in range(1,2*i):\n",
+    "        print(\"*\",end=\"\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
