--- a/Python_Essentials/01_basics/03_strings.ipynb
+++ b/Python_Essentials/01_basics/03_strings.ipynb
@@ -122,6 +122,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "String find() method\n",
+    "\n",
+    "The find() method returns the index of first occurrence of the substring (if found). If not found, it returns -1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "message = 'Python is a fun programming language fun'\n",
+    "print(message.find('fun'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n",
+      "3\n",
+      "-1\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "quote = 'Do small things with great love'\n",
+    "\n",
+    "# Substring is searched in 'hings with great love'\n",
+    "print(quote.find('small things', 10)) \n",
+    "\n",
+    "# Substring is searched in ' small things with great love' \n",
+    "print(quote.find('small things', 2))\n",
+    "\n",
+    "# Substring is searched in 'hings with great lov'\n",
+    "print(quote.find('o small ', 10, -1))\n",
+    "\n",
+    "# Substring is searched in 'll things with'\n",
+    "print(quote.find('things ', 6, 20))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
