--- a/Python_Essentials/01_basics/03_strings.ipynb
+++ b/Python_Essentials/01_basics/03_strings.ipynb
@@ -182,6 +182,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['welcome', 'to', 'the jungle']\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt = \"welcome to the jungle\"\n",
+    "x = txt.split(maxsplit=2)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
