--- a/Python_Essentials/01_basics/03_strings.ipynb
+++ b/Python_Essentials/01_basics/03_strings.ipynb
@@ -200,6 +200,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sorted()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'e', 'r', 's', 'x']\n"
+     ]
+    }
+   ],
+   "source": [
+    "alphabets = \"abxers\"\n",
+    "print(sorted(alphabets))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
