--- a/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
+++ b/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
@@ -261,32 +261,16 @@
     "            count[ord(c) - ord('a')] += 1\n",
     "    \n",
     "        key = tuple(count)\n",
-    "        print(anagrams_dict)\n",
     "        anagrams_dict[key].append(s)\n",
     "        \n",
-    "    return anagrams_dict.values()\n",
-    "\n"
+    "    return anagrams_dict.values()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "defaultdict(<class 'list'>, {})\n",
-      "defaultdict(<class 'list'>, {(1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0): ['eat']})\n",
-      "defaultdict(<class 'list'>, {(1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0): ['eat', 'tea']})\n",
-      "defaultdict(<class 'list'>, {(1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0): ['eat', 'tea'], (1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0): ['tan']})\n",
-      "defaultdict(<class 'list'>, {(1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0): ['eat', 'tea', 'ate'], (1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0): ['tan']})\n",
-      "defaultdict(<class 'list'>, {(1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0): ['eat', 'tea', 'ate'], (1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0): ['tan', 'nat']})\n",
-      "dict_values([['eat', 'tea', 'ate'], ['tan', 'nat'], ['bat']])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(group_anagrams([\"eat\", \"tea\", \"tan\", \"ate\", \"nat\", \"bat\"]))\n",
     "# Output: [['eat', 'tea', 'ate'], ['tan', 'nat'], ['bat']]\n",
@@ -299,43 +283,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Split the Array\n",
+    "\n",
+    "You are given an integer array nums of even length. You have to split the array into two parts nums1 and nums2 such that"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isPossibleToSplit(nums):\n",
+    "    lst_index = {}\n",
+    "    for index, value in enumerate(nums):\n",
+    "        if value in lst_index:\n",
+    "            lst_index[value] += 1\n",
+    "        else:\n",
+    "            lst_index[value] = 1\n",
+    "    \n",
+    "    print(lst_index)\n",
+    "    \n",
+    "    for count in lst_index.values():\n",
+    "        if count > 2:\n",
+    "            return False\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "defaultdict(<class 'list'>, {'key': ['']})\n"
+      "{1: 2, 2: 2, 3: 1, 4: 1}\n",
+      "True\n"
      ]
     }
    ],
    "source": [
-    "from collections import defaultdict\n",
-    "lst = defaultdict(list)\n",
-    "lst[\"key\"].append('')\n",
-    "print(lst)"
+    "nums = [1,1,2,2,3,4]\n",
+    "print(isPossibleToSplit(nums))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unhashable type: 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[46], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m sample \u001b[38;5;241m=\u001b[39m {[]}\n\u001b[1;32m      2\u001b[0m sample[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mkey\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(sample)\n",
-      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'list'"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
