--- a/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
+++ b/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
@@ -23,17 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def palindrom(value:str):\n",
     "    n = len(value)\n",
@@ -62,17 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5040\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def factorialOfNumber(value:int):\n",
     "    if value < 2 and isinstance(value, int):\n",
@@ -85,17 +69,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5040\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n = 7\n",
     "factorial = 1\n",
@@ -127,6 +103,7 @@
     }
    ],
    "source": [
+    "# This Functions represent the behavior of Max() function in python\n",
     "def largestElemetInList(lst:list):\n",
     "    # print(max(lst))\n",
     "    largest = lst[0]\n",
@@ -286,7 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Split the Array\n",
+    "Question 12: Split the Array\n",
     "\n",
     "You are given an integer array nums of even length. You have to split the array into two parts nums1 and nums2 such that"
    ]
