updated python file structure

--- a/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
+++ b/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
@@ -360,6 +360,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given an array of integers in ascending order, return index of the two numbers such that they add up to a specific key provided.\n",
+    "Example:\n",
+    "Take the array [1,2,3,4] and “key” is 7."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a program to find the first non-repeated character in a string.\n",
+    "\n",
+    "Write a program to check if two strings are anagrams of each other.\n",
+    "\n",
+    "Write a program to find the longest substring without repeating characters.\n",
+    "\n",
+    "Write a program to find the longest common prefix among a set of strings.\n",
+    "\n",
+    "Write a program to remove a specific character from a string.\n",
+    "\n",
+    "Write a program to implement the Rabin-Karp algorithm for string matching.\n",
+    "\n",
+    "Write a program to convert a string to its equivalent integer.\n",
+    "\n",
+    "Write a program to replace a specific word in a string with another word.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
