--- a/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
+++ b/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
@@ -29,11 +29,11 @@
    "source": [
     "def palindrom(value:str):\n",
     "    n = len(value)\n",
-    "    l = 0\n",
+    "    # l = 0\n",
     "    r = n-1\n",
     "    for i in range(len(value)):\n",
     "        if value[i] == value[r]:\n",
-    "            l += 1\n",
+    "            # l += 1\n",
     "            r -= 1\n",
     "        else:\n",
     "            return False\n",
@@ -152,24 +152,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 5: Write a Python program to count the frequency of each element in a list."
+    "Question 5: Write a Python program to count the frequency of each element in a list.\n",
+    "\n",
+    "https://stackoverflow.com/questions/9001509/how-do-i-sort-a-dictionary-by-key"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'dict' object has no attribute 'sort'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 14\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mlist\u001b[39m(freq_of_unordereded_list\u001b[38;5;241m.\u001b[39mvalues())\n\u001b[1;32m     13\u001b[0m unordered_list \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m2\u001b[39m]\n\u001b[0;32m---> 14\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43msortUnorderedList\u001b[49m\u001b[43m(\u001b[49m\u001b[43munordered_list\u001b[49m\u001b[43m)\u001b[49m) \u001b[38;5;66;03m# `a` has 4 instances of `1`, 4 of `2`, 2 of `3`, 1 of `4,` 2 of `5`   b = [4, 4, 2, 1, 2] # expected output\u001b[39;00m\n",
-      "Cell \u001b[0;32mIn[17], line 8\u001b[0m, in \u001b[0;36msortUnorderedList\u001b[0;34m(unordered_list)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m      7\u001b[0m         freq_of_unordereded_list[value] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m----> 8\u001b[0m \u001b[43mfreq_of_unordereded_list\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msort\u001b[49m()\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(freq_of_unordereded_list)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mlist\u001b[39m(freq_of_unordereded_list\u001b[38;5;241m.\u001b[39mvalues())\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'sort'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 4, 2, 2, 1]\n"
      ]
     }
    ],
@@ -181,13 +178,10 @@
     "            freq_of_unordereded_list[value] += 1\n",
     "        else:\n",
     "            freq_of_unordereded_list[value] = 1\n",
-    "    \n",
-    "    # https://stackoverflow.com/questions/9001509/how-do-i-sort-a-dictionary-by-key\n",
-    "    \n",
-    "    freq_of_unordereded_list.sort()\n",
-    "    print(freq_of_unordereded_list)\n",
-    "    return list(freq_of_unordereded_list.values())\n",
     "\n",
+    "    resp = [i for i in freq_of_unordereded_list.values()]\n",
+    "    resp.sort(reverse=True) \n",
+    "    return resp\n",
     "\n",
     "unordered_list = [5, 1, 2, 2, 4, 3, 1, 2, 3, 1, 1, 5, 2]\n",
     "print(sortUnorderedList(unordered_list)) # `a` has 4 instances of `1`, 4 of `2`, 2 of `3`, 1 of `4,` 2 of `5`   b = [4, 4, 2, 1, 2] # expected output\n",
@@ -394,6 +388,25 @@
     "Write a program to convert a string to its equivalent integer.\n",
     "\n",
     "Write a program to replace a specific word in a string with another word.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hash(\"Hi\")%10)\n",
+    "print(hash(12)%10)"
    ]
   },
   {
