--- a/Python_Essentials/01_basics/05_List.ipynb
+++ b/Python_Essentials/01_basics/05_List.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Python List sort() Method\n",
+    "### Python List sort() Method\n",
     "\n",
     "The sort() method sorts the list ascending by default.\n",
     "You can also make a function to decide the sorting criteria(s)."
