--- a/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
+++ b/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
@@ -200,7 +200,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# a whole number greater than 1 that cannot be exactly divided by any whole number other than itself and 1 (e.g. 2, 3, 5, 7, 11).\n",
+    "\n",
+    "def isprime(num:int):\n",
+    "    if num > 1:\n",
+    "        pass\n",
+    "    else:\n",
+    "        return 'Not a prime Number'"
+   ]
   },
   {
    "cell_type": "markdown",
