--- a/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
+++ b/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
@@ -9,36 +9,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# 1st Approach\n",
     "def main(arg1):\n",
     "    for i in range(0,int(len(arg1)/2)):\n",
     "        if arg1[i] == arg1[len(arg1)-i-1]:\n",
-    "            print(\"True\")\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
     "s = 'ccaack'\n",
     "main(s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True False\n"
+     ]
+    }
+   ],
    "source": [
+    "# 2nd Approach\n",
     "def palindrom(value:str):\n",
     "    n = len(value)\n",
-    "    # l = 0\n",
     "    r = n-1\n",
     "    for i in range(len(value)):\n",
     "        if value[i] == value[r]:\n",
-    "            # l += 1\n",
     "            r -= 1\n",
     "        else:\n",
     "            return False\n",
     "    return True\n",
-    "\n",
     "\n",
     "val1 = palindrom(\"MADAM\")\n",
     "val2 = palindrom(\"MADAMS\")\n",
