--- a/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
+++ b/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
@@ -239,10 +239,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n",
+      "[3, 5, 7, 9]\n",
+      "['this', 'this', 'n', 'that']\n",
+      "['this', 'not', 'that', 'that']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def commonElementsInLst(sampleList1,sampleList2):\n",
+    "    print(sampleList1)\n",
+    "    print(sampleList2)\n",
+    "\n",
+    "\n",
+    "list1 = [1,2,3,4,5,6]\n",
+    "list2 = [3,5,7,9]\n",
+    "commonElementsInLst(list1,list2)\n",
+    "\n",
+    "strList1 = ['this','this','n','that']\n",
+    "strList2 = ['this','not','that','that']\n",
+    "commonElementsInLst(strList1,strList2)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -420,21 +444,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9\n",
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "print(hash(\"Hi\")%10)\n",
-    "print(hash(12)%10)"
+    "Write a python code to get it sorted in the ascending order without using pre-defined functions? \n",
+    "\n",
+    "list1 = [4,7,8,1,3,2,7,7,9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a Python code to determine if two strings are isomorphic.\n",
+    "To be isomorphic, each character in the first string must uniquely map to a character in the second string, and vice versa.\n",
+    "\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "\n",
+    "string1 = 'egg'\n",
+    "\n",
+    "\n",
+    "string2 = 'add'\n",
+    "\n",
+    "\n",
+    "Output: Isomorphic strings"
    ]
   },
   {
