updated coding file

--- a/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
+++ b/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,6 @@
     "        if i > largest:\n",
     "            largest = i\n",
     "    print(f\"largest: {largest}\")\n",
-    "\n",
     "\n",
     "largestElemetInList([1,2,4,5,10,9,11])"
    ]
@@ -409,7 +408,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given an array of integers in ascending order, return index of the two numbers such that they add up to a specific key provided.\n",
+    "Question 13: Given an array of integers in ascending order, return index of the two numbers such that they add up to a specific key provided.\n",
     "Example:\n",
     "Take the array [1,2,3,4] and “key” is 7."
    ]
@@ -425,21 +424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a program to find the first non-repeated character in a string.\n",
-    "\n",
-    "Write a program to check if two strings are anagrams of each other.\n",
-    "\n",
-    "Write a program to find the longest substring without repeating characters.\n",
-    "\n",
-    "Write a program to find the longest common prefix among a set of strings.\n",
-    "\n",
-    "Write a program to remove a specific character from a string.\n",
-    "\n",
-    "Write a program to implement the Rabin-Karp algorithm for string matching.\n",
-    "\n",
-    "Write a program to convert a string to its equivalent integer.\n",
-    "\n",
-    "Write a program to replace a specific word in a string with another word.\n"
+    "Question 14: Write a program to find the first non-repeated character in a string."
    ]
   },
   {
@@ -453,7 +438,106 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a python code to get it sorted in the ascending order without using pre-defined functions? \n",
+    "Question 15: Write a program to check if two strings are anagrams of each other."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 16: Write a program to find the longest substring without repeating characters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 17: Write a program to find the longest common prefix among a set of strings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 18: Write a program to remove a specific character from a string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 19: Write a program to implement the Rabin-Karp algorithm for string matching."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 20: Write a program to convert a string to its equivalent integer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Question 21: Write a program to replace a specific word in a string with another word."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 22: Write a python code to get it sorted in the ascending order without using pre-defined functions? \n",
     "\n",
     "list1 = [4,7,8,1,3,2,7,7,9]"
    ]
@@ -469,7 +553,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a Python code to determine if two strings are isomorphic.\n",
+    "Question 23: Write a Python code to determine if two strings are isomorphic.\n",
     "To be isomorphic, each character in the first string must uniquely map to a character in the second string, and vice versa.\n",
     "\n",
     "\n",
