--- a/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
+++ b/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
@@ -290,10 +290,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def secondLargestNumer(numList:[int]):\n",
+    "    numList.sort()\n",
+    "    print(numList[-2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "554\n"
+     ]
+    }
+   ],
+   "source": [
+    "secondLargestNumer([100,101,201,564,10,11,554])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -568,6 +589,13 @@
     "\n",
     "Output: Isomorphic strings"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
