--- a/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
+++ b/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
@@ -295,8 +295,15 @@
    "outputs": [],
    "source": [
     "def secondLargestNumer(numList:[int]):\n",
-    "    numList.sort()\n",
-    "    print(numList[-2])"
+    "    sorted_List = []\n",
+    "    for index, value in enumerate(numList):\n",
+    "        if not sorted_List:\n",
+    "            sorted_List.append(i)\n",
+    "        else:\n",
+    "            if value > sorted_List[index]:\n",
+    "                sorted_List.append(value)\n",
+    "            else:\n",
+    "                pass\n"
    ]
   },
   {
@@ -313,7 +320,7 @@
     }
    ],
    "source": [
-    "secondLargestNumer([100,101,201,564,10,11,554])"
+    "secondLargestNumer([100,564,101,201,10,11,554])"
    ]
   },
   {
