--- a/Python-Coding-Challenges/Beginners_Level/Pattern_Problems.ipynb
+++ b/Python-Coding-Challenges/Beginners_Level/Pattern_Problems.ipynb
@@ -249,6 +249,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [1,2,4,5]\n",
+    "randValue = 3\n",
+    "\n",
+    "if 3 > lst[1] and 3 < lst[2]:\n",
+    "    lst.insert(2,3)\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
