--- a/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
+++ b/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
@@ -290,44 +290,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def secondLargestNumer(numList:[int]):\n",
-    "    sorted_List = []\n",
-    "    for index, value in enumerate(numList):\n",
-    "        if not sorted_List:\n",
-    "            sorted_List.append(i)\n",
-    "        else:\n",
-    "            if value > sorted_List[index]:\n",
-    "                sorted_List.append(value)\n",
-    "            else:\n",
-    "                pass\n"
+    "    largest_num = 0\n",
+    "    second_largest = 0\n",
+    "    for i in numList:\n",
+    "        if i > largest_num:\n",
+    "            second_largest = largest_num\n",
+    "            largest_num = i\n",
+    "        elif i > second_largest:\n",
+    "            second_largest = i\n",
+    "    return f\"second largest number: {second_largest}\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "554\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "secondLargestNumer([100,564,101,201,10,11,554])"
+    "print(secondLargestNumer([100,564,101,201,10,11,554]))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 10: Write a Python program to remove duplicates from a list."
+    "Question 10: Write a python program to find the Kth Largest Element in an Array "
    ]
   },
   {
@@ -341,7 +333,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 11: Write a Python function to group anagrams from a list of strings. \n",
+    "Question 11: Write a Python program to remove duplicates from a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 12: Write a Python function to group anagrams from a list of strings. \n",
     "Two strings are anagrams if they can be rearranged to form each other. \n",
     "The function should return a list of lists, where each inner list contains strings that are anagrams of each other."
    ]
@@ -386,7 +392,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 12: Split the Array\n",
+    "Question 13: Split the Array\n",
     "\n",
     "You are given an integer array nums of even length. You have to split the array into two parts nums1 and nums2 such that"
    ]
@@ -436,7 +442,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 13: Given an array of integers in ascending order, return index of the two numbers such that they add up to a specific key provided.\n",
+    "Question 14: Given an array of integers in ascending order, return index of the two numbers such that they add up to a specific key provided.\n",
     "Example:\n",
     "Take the array [1,2,3,4] and “key” is 7."
    ]
@@ -452,7 +458,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 14: Write a program to find the first non-repeated character in a string."
+    "Question 15: Write a program to find the first non-repeated character in a string."
    ]
   },
   {
@@ -466,7 +472,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 15: Write a program to check if two strings are anagrams of each other."
+    "Question 16: Write a program to check if two strings are anagrams of each other."
    ]
   },
   {
@@ -480,7 +486,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 16: Write a program to find the longest substring without repeating characters."
+    "Question 17: Write a program to find the longest substring without repeating characters."
    ]
   },
   {
@@ -494,7 +500,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 17: Write a program to find the longest common prefix among a set of strings."
+    "Question 18: Write a program to find the longest common prefix among a set of strings."
    ]
   },
   {
@@ -508,7 +514,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 18: Write a program to remove a specific character from a string."
+    "Question 19: Write a program to remove a specific character from a string."
    ]
   },
   {
@@ -522,7 +528,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 19: Write a program to implement the Rabin-Karp algorithm for string matching."
+    "Question 20: Write a program to implement the Rabin-Karp algorithm for string matching."
    ]
   },
   {
@@ -536,7 +542,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 20: Write a program to convert a string to its equivalent integer."
+    "Question 21: Write a program to convert a string to its equivalent integer."
    ]
   },
   {
@@ -551,7 +557,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "Question 21: Write a program to replace a specific word in a string with another word."
+    "Question 22: Write a program to replace a specific word in a string with another word."
    ]
   },
   {
@@ -565,7 +571,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 22: Write a python code to get it sorted in the ascending order without using pre-defined functions? \n",
+    "Question 23: Write a python code to get it sorted in the ascending order without using pre-defined functions? \n",
     "\n",
     "list1 = [4,7,8,1,3,2,7,7,9]"
    ]
@@ -581,7 +587,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 23: Write a Python code to determine if two strings are isomorphic.\n",
+    "Question 24: Write a Python code to determine if two strings are isomorphic.\n",
     "To be isomorphic, each character in the first string must uniquely map to a character in the second string, and vice versa.\n",
     "\n",
     "\n",
