--- a/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
+++ b/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
@@ -74,9 +74,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5040\n"
+     ]
+    }
+   ],
    "source": [
     "def factorialOfNumber(value:int):\n",
     "    if value < 2 and isinstance(value, int):\n",
@@ -303,15 +311,8 @@
     "            largest_num = i\n",
     "        elif i > second_largest:\n",
     "            second_largest = i\n",
-    "    return f\"second largest number: {second_largest}\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return f\"second largest number: {second_largest}\"\n",
+    "\n",
     "print(secondLargestNumer([100,564,101,201,10,11,554]))"
    ]
   },
@@ -338,10 +339,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def removeDuplicates(lstData):\n",
+    "    nonDuplicateList = []\n",
+    "    for i in lstData:\n",
+    "        if i not in nonDuplicateList:\n",
+    "            nonDuplicateList.append(i)\n",
+    "\n",
+    "    return nonDuplicateList\n",
+    "\n",
+    "\n",
+    "duplicateList = [1,2,3,4,5,6,6,7,8,5]\n",
+    "print(removeDuplicates(duplicateList))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -443,6 +464,7 @@
    "metadata": {},
    "source": [
     "Question 14: Given an array of integers in ascending order, return index of the two numbers such that they add up to a specific key provided.\n",
+    "\n",
     "Example:\n",
     "Take the array [1,2,3,4] and “key” is 7."
    ]
