--- a/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
+++ b/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
@@ -471,10 +471,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n",
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# {(0,1):3,(0,2):4,(0,3):5,(1,0):3,(1,2)(1,3)(2,0)(2,1)(2,3),}\n",
+    "\n",
+    "array = [1,2,3,4]\n",
+    "for index in range():\n",
+    "    print(index)\n"
+   ]
   },
   {
    "cell_type": "markdown",
