--- a/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
+++ b/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
@@ -471,28 +471,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "0\n",
-      "0\n",
-      "1\n",
-      "1\n",
-      "2\n"
+      "[2, 3]\n"
      ]
     }
    ],
    "source": [
-    "# {(0,1):3,(0,2):4,(0,3):5,(1,0):3,(1,2)(1,3)(2,0)(2,1)(2,3),}\n",
+    "def twoSum(nums, target):\n",
+    "    indexedValues = {}\n",
+    "    for i,value in enumerate(nums):\n",
+    "        diff = target - value\n",
+    "        if diff in indexedValues:\n",
+    "            return [indexedValues[diff], i]\n",
+    "        else:\n",
+    "            indexedValues[value] = i\n",
     "\n",
-    "array = [1,2,3,4]\n",
-    "for index in range():\n",
-    "    print(index)\n"
+    "print(twoSum([1,2,3,4],7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-6\n",
+      "-5\n",
+      "-4\n",
+      "-3\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [1,2,3,4]\n",
+    "for i in nums:\n",
+    "    print(i-7)"
    ]
   },
   {
