--- a/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
+++ b/Python-Coding-Challenges/Beginners_Level/Coding_Questions.ipynb
@@ -504,10 +504,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def findFirstNonRepeatingCharacter(characters):\n",
+    "    char_count = {}\n",
+    "\n",
+    "    for i in characters:\n",
+    "        if i not in char_count:\n",
+    "            char_count[i] = 1\n",
+    "        else:\n",
+    "            char_count[i] += 1 \n",
+    "\n",
+    "    for key, value in char_count.items():\n",
+    "        if value == 1:\n",
+    "            return key\n",
+    "        else:\n",
+    "            return 'Null'\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print(findFirstNonRepeatingCharacter('aabccdeff')) # should return 'b'\n",
+    "# print(findFirstNonRepeatingCharacter('aabbcc')) # should return null\n",
+    "print(findFirstNonRepeatingCharacter('abcdef')) # should return 'a'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -675,7 +710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
