--- a/Python-Coding-Challenges/01-Beginners_Level/Coding_Questions.ipynb
+++ b/Python-Coding-Challenges/01-Beginners_Level/Coding_Questions.ipynb
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,13 +521,12 @@
     "        if value == 1:\n",
     "            return key\n",
     "        else:\n",
-    "            return 'Null'\n",
-    "\n"
+    "            return 'Null'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
