solved sum of square

--- a/Python-Coding-Challenges/02-Arrays/01-List-Methods.ipynb
+++ b/Python-Coding-Challenges/02-Arrays/01-List-Methods.ipynb
@@ -1,6 +1,61 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sum of Squares of Even Numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sumOfEvenSquares(lst):\n",
+    "    square_value = 0\n",
+    "    for i in lst:\n",
+    "        if i%2==0:\n",
+    "            square_value += i**2\n",
+    "    return square_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sumOfEvenSquares([1, 2, 3, 4, 5]))   # 20 (2^2 + 4^2)\n",
+    "print(sumOfEvenSquares([-1, 0, 1, 2, 3, 4]))    # 20 (0^2 + 2^2 + 4^2)\n",
+    "assert sumOfEvenSquares([]) == 0,'Unexpected output'  # 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
