--- a/Python-Coding-Challenges/02-Arrays/01-List-Methods.ipynb
+++ b/Python-Coding-Challenges/02-Arrays/01-List-Methods.ipynb
@@ -23,18 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20\n",
-      "20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(sumOfEvenSquares([1, 2, 3, 4, 5]))   # 20 (2^2 + 4^2)\n",
     "print(sumOfEvenSquares([-1, 0, 1, 2, 3, 4]))    # 20 (0^2 + 2^2 + 4^2)\n",
@@ -42,17 +33,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Leetcode 53 - Maximum subarray"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum([-2,1,-3,4,-1,2,1,-5,4]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'dict'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m({{\u001b[38;5;241m1\u001b[39m:\u001b[38;5;241m0\u001b[39m}:[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAjay\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;241m29\u001b[39m]})\n",
+      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'dict'"
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -86,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
